[package]
name = "tokio-perf-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
futures = "0.3"
tokio = { version = "1.20", features = ["io-util", "rt", "net", "macros"] }

[patch.crates-io]
tokio = { path = "/home/carllerche/Code/tokio/tokio" }