[package]
name = "tokio-perf-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
lto = true

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
slab = "0.4"
libc = "0.2"
tokio = { version = "1.20", features = ["io-util", "rt", "net", "macros"] }
socket2 = "0.4.4"
io-uring = { version = "0.5.2", features = ["unstable"] }
affinity = "0.1.2"